--- a/base.css
+++ b/base.css
@@ -1,8 +1,13 @@
 :root{
+    --primary-color: #EE4D2D;
+    --primary-color-rgba: rgb(238,75,43 );
     --white-color: #fff;
     --black-color: #000;
     --text-color:#255;
-
+    --border-color: #dbdbdb;
+    --navbar-height:34px;
+    --header-height: 120px;
+    --header-with-search-height: calc(var(--header-height: 120px) - var(--navbar-height:34px));
 }
 *{
     box-sizing: inherit;
@@ -25,4 +30,72 @@ html{
 .grid_row{
     display: flex;
     flex-wrap: wrap;
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+@keyframes growth{
+    from {
+        transform: scale(var(--growth-from));
+    }
+    to {
+        transform: scale(var(--growth-to));
+    }
+}
+.modal{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    animation: fadeIn ease-in 0.5s;
+}
+.modal_overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    
+}
+.modal_body{
+    --growth-from:0.7;
+    --growth-to:1;
+    margin: auto;
+    animation: growth linear 0.5s;
+    position: relative;
+    z-index: 1;
+    border-radius: 5px;
+}
+.btn{
+    min-width: 142px;
+    height: 34px;
+    text-decoration: none;
+    border-radius: 2px;
+    border: none;
+    padding: 0 12px;
+    font-size: 1.5rem;
+    outline: none;
+    cursor: pointer;
+    line-height: 1.6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn.btn-normal:hover{
+    background-color: rgba(0, 0, 0, 0.4);
+}
+.btn.btn-primary{
+background-color: var(--primary-color) ;
+color: var(--white-color);
+}
+.btn.btn-size-s{
+    height: 33px;
+    font-size: 12px;
+    padding: 0 8px;
 }
