--- a/main.css
+++ b/main.css
@@ -1,11 +1,11 @@
 .header{
-    height: 120px;
+    height: var(--header-height);
     background-image: linear-gradient(0, orange, red);
 }
 .header_navbar-list{
     list-style: none;
     padding-left: 0;
-    margin-top: 4px;
+    margin: 4px 0 0 0 ;
 
 }
 .header_navbar-item{
@@ -13,6 +13,7 @@
     position: relative;
     min-height: 26px;
     color: var(--white-color);
+    font-size: 1.4rem;
 }
 .header_navbar-item,
 .header_navbar-item-link {
@@ -22,6 +23,7 @@
     text-decoration: none;
     font-weight: 300;
 }
+.header_navbar-list 
 .header_navbar-item,
 .header_navbar-item-link,
 .header_navbar-icon-link{
@@ -76,6 +78,8 @@ cursor: pointer;
     top: 100%;  
     padding: 8px;
     border-radius: 2px;
+    display: none;
+    animation: fadeIn ease-in 1s;
 }
 .header_qr-img{
     width: 100%;
@@ -83,11 +87,287 @@ cursor: pointer;
 }
 .header_qr-apps{
     display: flex;
+    justify-content: space-between;
 
 }
-.header_qr-download-img{
+.header_qr::before{
+    position: absolute;
+    left: 0;
+    top: -16px;
+    width: 100%;
+    height: 20px;
+    content: "";
+    display: block;
+}
 
+.header_qr-link:nth-child(1){
+margin-left: 11px;
+}
+.header_qr-link:nth-child(2){
+    margin-right: 11px;
 }
 .header_qr-download-img{
+height: 16px;
 
+}
+.header_navbar-item-has-qr:hover .header_qr{
+    display: block;
+
+}
+
+.header_notify{
+    position: absolute;
+    top: 118%;
+    width: 404px;
+    background-color: var(--white-color);
+    right: 0;
+    transform-origin: calc(100%-20px) top ;
+    border: 1px solid  #d3d3d3;
+    animation: headerNotify ease-in-out 1s;
+    will-change: opacity, transform ;
+    display: none;
+}
+
+.header_notify::before {
+    content: "";
+    border-width: 20px 30px;
+    border-style: solid;
+    border-color: transparent  transparent var(--white-color) transparent;
+    position: absolute;
+    right: 4px;
+    top: -30px;
+}
+
+.header_notify::after{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 90px;
+    right: 0;
+    top: -16px;
+    height: 20px;
+}
+@keyframes headerNotify{
+    from{
+        opacity: 0;
+        transform: scale(0);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+.header_notify-header{
+background-color: var(--white-color);
+height: 40px;
+
+}
+.header_notify-header h3{
+    color: violet;
+    margin: 0 0 0 12px;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 40px;
+    cursor: text;
+    user-select: none;
+}
+
+.header_notify-list{
+padding-left: 0;
+}
+
+.header_notify-item{
+display: flex;
+}
+.header_notify-item:hover{
+    background-color: pink;
+}
+.header_notify-item--view{
+
+    background-color: rgba(238,75,43,0.08 );
+}
+.header_notify-link{
+    display: flex;
+    padding: 12px;
+    width: 100%;
+    text-decoration:none ;
+    
+}
+
+.header_notify-img{
+width: 48px;
+object-fit: contain;
+}
+.header_notify-info{
+margin-left: 12px;
+}
+.header_notify-name{
+display: block;
+font-size: 1.4rem;
+color: var(--black-color);
+font-weight: 400;
+line-height: 1.8rem;
+}
+.header_notify-description{
+display: block;
+font-size: 1.2rem;
+color: var(--black-color);
+line-height: 1.6rem;
+margin-top: 4px;
+}
+
+.header_notify-footer{
+display: flex;
+}
+.header_notify-footer-btn{
+    text-decoration: none;
+    color: black;
+    padding: 8px 0;
+    width: 100%;    
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+
+.header_navbar-item-has-notify:hover .header_notify{
+    display: block;
+    
+
+}
+.auth-form{
+width: 502px;  
+background-color: var(--white-color);
+border-radius: 5px;
+overflow: hidden;
+}
+.auth-form_container{
+    padding: 0 32px;
+}
+.auth-form_header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 12px ;
+    margin-top: 10px;
+}
+.auth-form_heading{
+    font-size: 2.2rem;
+    font-weight: 400;
+}
+.auth-form_switch-btn{
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: var(--primary-color);
+    cursor: pointer;
+}
+.auth-form_form{
+    
+}
+.auth-form_input{
+    width: 100%;
+    height: 40px;
+    margin-top: 16px;
+    padding: 0 12px;
+    font-size: 1.4rem;
+    border: 1px solid  ;
+    border-radius: 2px;
+    outline: none;
+}
+.auth-form_input:focus{
+    border-color: #888888;
+}
+.auth-form_aside{
+    margin-top: 18px;
+}
+.auth-form_policy-text{
+    line-height: 1.8rem;
+    font-size: 1.2rem;
+    text-align: center;
+    padding: 0 12px;
+}
+.auth-form_policy-link{
+    text-decoration: none;
+    color: var(--primary-color);
+}
+.auth-form_controls{
+    margin-top: 80px;
+    display: flex;
+    justify-content:flex-end ;
+}
+.auth-form_controls-back{
+    margin-right: 8px;
+}
+.auth-form_socials{
+ background-color: #f5f5f5;
+ padding: 16px 36px;
+ display: flex;
+ justify-content: space-between;
+ margin-top: 24px;
+}
+.auth-form_socials-title{
+    margin: 0 24px;
+}
+.auth-form_socials-icon{
+    font-size: 1.8rem;
+}
+.auth-form_socials-facebook{
+    background-color: #3a5a98;
+    color: var(--white-color);
+}
+.auth-form_socials-facebook
+.auth-form_socials-icon{
+    color: var(--white-color);
+
+}
+.auth-form_socials-google{
+    background-color: var(--white-color);
+    color: #666;
+}
+.auth-form_help{
+    display: flex;
+    justify-content: flex-end;
+}
+.auth-form_help-link{
+    text-decoration: none;
+    font-size: 1.4rem ;
+    color: #939393;
+}
+.auth-form_help-seperate{
+    display: block;
+    border-left: 1px solid var(--border-color);
+    height: 22px;
+    margin: -5px 16px;
+}
+.auth-form_help-forgot{
+    color: var(--primary-color);
+}
+.header-with-search{
+height: var(--header-with-search-height);
+display: flex;
+align-items: center;
+margin: 0 8px;
+}
+.header_logo{
+    width: 200px;
+}
+.header_logo-img{
+    width: 150px;
+    color: var(--white-color);
+}
+.header_search{
+    background-color: var(--white-color);
+    height: 40px;
+    flex: 1;
+    border-radius: 2px;
+}
+.header_cart{
+    width: 150px;
+    text-align: center;
+    
+}
+.header_cart-icon{
+    color: var(--white-color);
+    font-size: 2.6rem;
+    margin-top: 6px;
 }
