--- a/base.css
+++ b/base.css
@@ -7,7 +7,7 @@
     --border-color: #dbdbdb;
     --navbar-height:34px;
     --header-height: 120px;
-    --header-with-search-height: calc(var(--header-height: 120px) - var(--navbar-height:34px));
+    --header-with-search-height:calc(var(--header-height) - var(--navbar-height));
 }
 *{
     box-sizing: inherit;
@@ -73,7 +73,7 @@ html{
     border-radius: 5px;
 }
 .btn{
-    min-width: 142px;
+    min-width: 124px;
     height: 34px;
     text-decoration: none;
     border-radius: 2px;
