--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@
     text-decoration: none;
     font-weight: 300;
 }
-.header_navbar-list 
+.header_navbar-list, 
 .header_navbar-item,
 .header_navbar-item-link,
 .header_navbar-icon-link{
@@ -79,7 +79,7 @@ cursor: pointer;
     padding: 8px;
     border-radius: 2px;
     display: none;
-    animation: fadeIn ease-in 1s;
+    animation: fadeIn ease-in 0.5s;
 }
 .header_qr-img{
     width: 100%;
@@ -346,7 +346,7 @@ overflow: hidden;
 height: var(--header-with-search-height);
 display: flex;
 align-items: center;
-margin: 0 8px;
+
 }
 .header_logo{
     width: 200px;
@@ -367,25 +367,182 @@ margin: 0 8px;
     width: 150px;
     text-align: center;
     
+    
 }
+.header_cart-wrap{
+    position: relative;
+    display: inline-block;
+    padding: 0 12px;
+    cursor: pointer;
+    
+}
+
 .header_cart-icon{
     color: var(--white-color);
     font-size: 2.6rem;  
     margin-top: 6px;
 }
-.header_search-input{
+.header_cart-wrap:hover .header_cart-list{
+    display: block;
+}
+.header_cart-list{
+    position: absolute;
+    top: calc(100% + 6px);
+    right: -2px;
+    background-color: var(--white-color);
+    width: 400px;
+    border-radius: 2px;
+    box-shadow: 0 1px 3.125rem 0 rgba(0, 0, 0, 0.2);
+    /* display: none; */
+    animation: fadeIn ease-in-out 0.5s;
+    cursor: default;
+    
+}
+.header_cart-heading{
+    text-align: left;
+    margin: 8px 0 8px 12px;
+    font-size: 1.4rem;
+    color: #999999;
+    font-weight: 400;
+   
+}
+.header_cart-list-item{
+    padding-left: 0;
+    list-style: none;
+}
+.header_cart-item{
+    display: flex;
+    align-items: center;
+}
+.header_cart-item:hover{
+    background-color: #f8f8f8;
+}
+.header_cart-img{
+    width: 42px;
+    height: 42px;
+    margin: 12px;
+}
+.header_cart-item-info{
+    width: 100%;
+    margin-right: 12px;
+}
+.header_cart-item-head{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin:0 0 12px 0;
+}
+
+.header_cart-item-name{
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: var(--text-color);
+    margin: 0;
+}
+.header_cart-item-price{
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--primary-color);
+}
+.header_cart-item-multiply{
+    color: #757575;
+    font-size: 0.9rem;
+    margin: 0 4px;
+}
+.header_cart-item-qnt{
+    font-size: 1.2rem;
+    color: #757575;
+}
+.header_cart-item-body{
+    display: flex;
+    text-align: left;
+    justify-content: space-between;
+    
+}
+.header_cart-item-description{
+    color: #757575;
+    font-size: 1.3rem;
+    font-weight: 300;
+}
+.header_cart-item-remove{
+    font-size: 1.4rem;
+    color: var(--text-color);
+    
+}
+.header_cart-item-remove:hover{
+    color: var(--primary-color);
+    cursor: pointer;
+}
+.header_cart-view-cart{
+    float: right;
+    margin: 0 12px 12px 0;
+}
+.header_cart-view-cart:hover {
+    background-color: #e48774 !important;
+}
+.header_cart-list::after{
+    cursor: pointer;
+    position: absolute;
+    content: "";
+    right: 5px;
+    top: -26px;
+    border-width: 17px 20px;
+    border-style: solid;
+    border-color: transparent transparent var(--white-color) transparent;
+}
+.header_cart-list-no-cart{
+    padding: 24px 0;
+    text-align: center;
+}
+.header_cart-list-no-cart .header_cart-no-cart-img,
+.header_cart-list-no-cart .header_cart-list-no-cart-msg
+{
+    display: block;
+    margin: 0 auto;
+}
+.header_cart-no-cart-img{
+    width: 54%;
+    display: none;
+}
+.header_cart-list-no-cart-msg{
+    display: none;
+
+    font-size: 1.4rem;
+    margin-top: 14px;
+    color: var(--text-color);
+}
+.header_cart-notice {
+    position: absolute;
+    top: -4px;
+    right: -4px;
+    padding: 1px 7px;
+    background-color: var(--white-color);
+    color: var(--primary-color);
+    border-radius: 10px;
+    border: 2px solid #EE4D2D;
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+}
+.header_search-input-wrap{
     flex: 1;
+    height: 100%;
+    position: relative;
+}
+ .header_search-input{ 
+    width: 100%;
     height: 100%;
     border: none;
     outline: none;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     color: var(--text-color);
     padding: 0 16px;
-    border-radius: 3px;
+    border-radius: 2px;
 }
 .header_search-select{
     border-left: 1px solid #cccccc;
     padding-left: 16px;
+    position: relative;
+    cursor: pointer;
 }
 .header_search-select-label{
     font-size: 1.4rem;
@@ -399,4 +556,120 @@ margin: 0 8px;
     margin: 0 16px 0 8px ;
     position: relative;
     top: 1px;
+}
+.header_search-btn{
+    background-color: var(--primary-color);
+    border: none;
+    height: 34px;
+    width: 60px;
+    border-radius: 2px;
+    margin-right: 3px;
+    outline: none;
+}
+.header_search-btn:hover{
+    background-color: #ec593c;
+    cursor: pointer;
+}
+.header_search-btn-icon{
+    font-size: 1.4rem;
+    color: var(--white-color);
+
+}
+.header_search-select:hover .header_search-option {
+    display: block;
+}
+.header_search-option{
+    position: absolute;
+    right: 0;
+    top: 120%;
+    width: 130px;
+    list-style: none;
+    box-shadow: 0 1 2px #e0e0e0;
+    border-radius: 2px;
+    padding-left: 0;
+    display: none;
+    margin-top: 5px;
+    animation: fadeIn ease-in 0.5s;
+}
+.header_search-option::after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 10px;
+    
+    position: absolute;
+    top: -10px;
+    left: 0;
+    
+}
+
+.header_search-option-item{
+    background-color: var(--white-color);
+    padding: 8px 8px;
+}
+.header_search-option-item:first-child{
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+}
+.header_search-option-item:last-child{
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+.header_search-option-item:hover{
+    background-color: #fafafa;
+    cursor: pointer;
+}
+.header_search-option-item span{
+    font-size: 1.4rem;
+    color: var(--text-color);
+    margin-left: 8px;
+}
+.header_search-option-item i{
+    font-size: 1.2rem;
+    color: var(--primary-color);
+    margin-left:12px;
+    display: none;
+}
+.header_search-option-item-active i{
+    display: inline-block;
+} 
+.header_search-input:focus ~.header_search-history{
+    display: block;
+}
+.header_search-history{
+    position: absolute;
+    top: calc(100% + 2px);
+    left: 0;
+    width: calc(100% - 16px);
+    background-color: var(--white-color);
+    border-radius: 2px;
+    box-shadow: 0 1px 5px #757575;
+    display: none;
+    overflow: hidden;
+}
+.header_search-history-heading{
+    margin: 6px 12px;
+    font-size: 1.4rem;
+    color: #999999;
+    font-weight: 400;
+}
+.header_search-history-list{
+    padding-left: 0;
+    list-style: none;
+    margin: 6px 0 0;
+}
+.header_search-history-item{
+    height: 38px;
+    padding: 0 12px;
+}
+
+.header_search-history-item:hover{
+    background-color: #fafafa;
+}
+.header_search-history-item a{
+    text-decoration: none;
+    font-size: 1.4rem;
+    line-height: 38px;
+    color: var(--text-color);
+    display: block;
 }
