--- a/base.css
+++ b/base.css
@@ -19,6 +19,12 @@ html{
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
+/* Responsive */
+
+
+
+
+
 .grid{
     width: 1200px;
     max-width: 100%;
@@ -30,6 +36,18 @@ html{
 .grid_row{
     display: flex;
     flex-wrap: wrap;
+    margin-left: -12px;
+    margin-right: -12px;
+}
+.grid_column-2{
+    padding-left: 12px;
+    padding-right: 12px;
+    width: 16.6667%;
+}
+.grid_column-8{
+    padding-left: 12px;
+    padding-right: 12px;
+    width: 66.6667%;
 }
 @keyframes fadeIn {
     from {
