--- a/main.css
+++ b/main.css
@@ -755,3 +755,288 @@ align-items: center;
     color: var(--text-color);
     display: block;
 }
+.app_container{
+    background-color: #f5f5f5;
+}
+.app_content{
+    padding: 36px;
+}
+.category{
+    background-color: var(--white-color);
+    border-radius: 2px;
+}
+.category_heading{
+    font-size: 1.6rem;
+    color: var(--text-color);
+    padding: 12px 16px;
+    margin-top: 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.category_heading-icon{
+    font-size: 1.4rem;
+    margin-right: 4px;
+    position: relative;
+    top: -1px;
+}
+.category-list{
+    list-style: none;
+    margin-left: 9px;
+    padding: 0 0 8px 0;
+}
+.category-item{
+
+}
+.category-item-active .category-item_link{
+    color: var(--primary-color);
+}
+.category-item-active .category-item_link::before{
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 7px;
+    border: 4px solid;
+    transform: translateY(-50% );
+    border-color: transparent transparent transparent var(--primary-color);
+}
+.category-item_link{
+    position: relative;
+    font-size: 1.5rem;
+    color: var(--text-color);
+    text-decoration: none;
+    padding: 8px 16px;
+    display: block;
+    right: 0;
+    transition: right linear 0.1s;
+}
+.category-item_link:hover{
+    right: -4px;
+    color: var(--primary-color);
+}
+.home-filter{
+    background-color: rgba(0, 0, 0, 0.1);
+    display: flex;
+    
+    align-items: center;
+    border-radius: 2px;    
+}
+.home-filter_page{
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+.home-filter_label{
+    font-size: 1.4rem;
+    color: #555555;
+    margin: 16px;
+}
+.home-filter-btn{
+    margin-right: 12px;
+    min-width: 90px;
+}
+.home-filter_page-num{
+    font-size: 1.4rem;
+    color: var(--text-color);
+    margin-right: 22px;
+}
+.home-filter_page-current{
+    color: var(--primary-color);
+}
+.home-filter_page-control{
+    border-radius: 2px;
+    overflow: hidden;
+    display: flex;
+    width: 72px;
+    height: 36px;
+}
+.home-filter_page-btn{
+    flex: 1;
+    background-color: var(--white-color);
+    text-decoration: none;
+    display: flex;
+}
+.home-filter_page-btn:first-child{
+    border-right: 1px solid #eeeeee;
+}
+.home-filter_page-icon{
+    margin: auto;
+    font-size: 1.4rem;
+    color: #555555;
+}
+.home-filter_page-btn-disable{
+    background-color: #f9f9f9;
+    cursor: default;
+}
+.home-filter_page-btn-disable .home-filter_page-icon{
+    color: #cccccc;
+}
+.home-product-item{
+    display: block;
+    position: relative;
+    text-decoration: none;
+    margin-top: 10px;
+    background-color: var(--white-color);
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+    transition: transform linear 0.1s;
+    will-change: transform;
+}
+.home-product-item:hover{
+    transform: translateY(-1px);
+    box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.1);
+}
+
+.home-product-item_img{
+    padding-top: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    
+}
+.home-product-item_name{
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--text-color);
+    line-height: 1.8rem;
+    margin: 10px 10px 6px;
+    overflow: hidden;
+    height: 3.6rem;
+    display: block;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    text-overflow: ellipsis;
+}
+.home-product-item_price{
+    display: flex;
+    margin-left: 10px;
+    align-items: baseline;
+    flex-wrap: wrap;
+}
+.home-product-item_price-old{
+    font-size: 1.4rem;
+    columns: #666;
+    text-decoration: line-through;
+}
+.home-product-item_price-current{
+font-size: 1.6rem;
+    color: var(--primary-color);
+    margin-left: 6px;
+}
+.home-product-item_-action{
+    display: flex;
+    margin: 6px 10px 0;
+    justify-content: space-between;
+}
+.home-product-item_like{
+    font-size: 1.3rem;
+
+}
+i.home-product-item_like-icon-fill{
+ display: none;
+ color: var(--primary-color);
+}
+.home-product-item_like-liked .home-product-item_like-icon-fill{
+    display: inline-block;
+}
+.home-product-item_like-liked .home-product-item_like-icon-empty{
+    display: none;
+}
+.home-product-item_rate{
+    font-size: 1rem;
+    transform: scale(0.8);
+    transform-origin: right;
+    color: #d5d5d5;
+    
+    margin: -1px 0 0 auto;
+}
+.home-product-item_star-gold{
+    color: var(--star-gold-color);
+}
+.home-product-item_sold{
+    font-size: 1.2rem;
+    color: var(--text-color);
+    margin-left: 6px;
+
+}
+.home-product-item_origin{
+    display: flex;
+    margin: 3px 10px 0;
+    color: #595959;
+    font-size: 1.2rem;
+    font-weight: 300;
+}
+.home-product-item_brand{
+    margin-right: auto;
+}
+.home-product-item_origin-name{
+
+}
+.home-product-item_favourite:after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 3px;
+    filter: brightness();
+    border-top: 3px solid currentColor;
+    border-left: 3px solid transparent;
+}
+.home-product-item_favourite span{
+    color: var(--white-color);
+}
+.home-product-item_favourite{
+    position: absolute;
+    top: 10px;
+    left: -4px;
+    background-color: currentColor;
+    font-size: 1rem;
+   color: var(--primary-color);
+    font-weight: 400;
+    line-height: 1.6rem;
+    padding-right: 4px;
+    border-bottom-right-radius: 3px;
+    border-top-right-radius: 3px;
+}
+.home-product-item_favourite i{
+    font-size: 0.9rem;
+    color: var(--white-color);
+    margin: 0 2px 0 5px;
+}
+.home-product-item_sale-off{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 40px;
+    height: 36px;
+    text-align: center;
+    background-color: rgba(255,216,64,0.94);
+}
+.home-product-item_sale-off-percent{
+    color: var(--primary-color);
+    font-weight: 600;
+    font-size: 1.2rem;
+    line-height: 1.2rem;
+    position: relative;
+    top: 4px;
+}
+.home-product-item_sale-off-label{
+    font-size: 1.3rem;
+    line-height: 1.3rem;
+    color: var(--white-color);
+    position: relative;
+    top: 6px;
+    font-weight: 600;
+}
+.home-product-item_sale-off::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    border-width: 0 20px 6px;
+    border-style: solid;
+    color: rgba(255,216,64,0.94);
+    border-color: transparent currentColor transparent currentColor;
+}
+.home-product{
+    margin-bottom: 10px;
+}
