--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@
 .header_navbar-user-menu{
     position: absolute;
     padding-left: 0;
-    top: calc(100% + 4px);
+    top: calc(100% + 6px);
     box-shadow: 0 0 2px #464343;
     text-align: left;
     z-index: 1;
@@ -156,6 +156,8 @@ cursor: pointer;
     border-radius: 2px;
     display: none;
     animation: fadeIn ease-in 0.5s;
+    z-index: 1;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 .header_qr-img{
     width: 100%;
@@ -478,7 +480,7 @@ align-items: center;
     display: none;  
     animation: fadeIn ease-in-out 0.5s;
     cursor: default;
-    
+    z-index: 1;
 }
 .header_cart-heading{
     text-align: left;
@@ -491,6 +493,8 @@ align-items: center;
 .header_cart-list-item{
     padding-left: 0;
     list-style: none;
+    height: 56vh;
+    overflow-y: auto;
 }
 .header_cart-item{
     display: flex;
@@ -520,6 +524,15 @@ align-items: center;
     font-weight: 500;
     color: var(--text-color);
     margin: 0;
+    max-height: 4rem;
+    overflow: hidden;
+    flex: 1;
+    padding-right: 16px;
+    line-height: 2rem;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    text-align: left;
 }
 .header_cart-item-price{
     font-size: 1.4rem;
@@ -672,6 +685,7 @@ align-items: center;
     display: none;
     margin-top: 5px;
     animation: fadeIn ease-in 0.5s;
+    z-index: 1;
 }
 .header_search-option::after{
     content: "";
@@ -728,6 +742,7 @@ align-items: center;
     box-shadow: 0 1px 5px #757575;
     display: none;
     overflow: hidden;
+    z-index: 1;
 }
 .header_search-history-heading{
     margin: 6px 12px;
@@ -768,9 +783,9 @@ align-items: center;
 .category_heading{
     font-size: 1.6rem;
     color: var(--text-color);
-    padding: 12px 16px;
+    padding: 12px 16px 0;
     margin-top: 0;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+   text-transform: uppercase;
 }
 .category_heading-icon{
     font-size: 1.4rem;
@@ -789,21 +804,13 @@ align-items: center;
 .category-item-active .category-item_link{
     color: var(--primary-color);
 }
-.category-item-active .category-item_link::before{
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 7px;
-    border: 4px solid;
-    transform: translateY(-50% );
-    border-color: transparent transparent transparent var(--primary-color);
-}
+
 .category-item_link{
     position: relative;
     font-size: 1.5rem;
     color: var(--text-color);
     text-decoration: none;
-    padding: 8px 16px;
+    padding: 6px 20px;
     display: block;
     right: 0;
     transition: right linear 0.1s;
@@ -1039,4 +1046,7 @@ i.home-product-item_like-icon-fill{
 }
 .home-product{
     margin-bottom: 10px;
+}
+.home-product-pagination{
+ margin: 48px 0 32px 0 ;   
 }
